# cmdlauncher

./: .editorconfig  CMakeLists.txt  CNAME  README  aboutdialog.cpp  aboutdialog.h  cmdlauncher.pro  fileselector.cpp  fileselector.h  global.cpp  global.h  index.html  main.cpp  maintableview.cpp  maintableview.h  mainwindow.cpp  mainwindow.h  sample.cla
examples/: auCDtect.cla  grep.cla  upx.cla
